fix : settings svg not fitting with dark mode, popup close button getting out of frame, upgrades hidden text appearing multiple times

--- a/NewFront/InternshipClickerFront/src/style/style.css
+++ b/NewFront/InternshipClickerFront/src/style/style.css
@@ -44,10 +44,11 @@ body h1{
 }
 .BTNClose button{
     align-self: flex-end;
+    margin-right : 0.5vw;
     background-color: transparent;
     border:none;
-    max-width: 3.5vw;
-    max-height: 3.5vh;
+    max-width: 60px;
+    max-height: 60px;
 }
 .BTNClose button img{
     max-width:100%;
